layout navbar | dif

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
-      "@App/*": ["./src/*"]
+      "@App/*": ["./src/*"],
+      "@components/*" : ["./src/components/*"]
     }
   }
 }
