--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
