--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.2.2",
+    "@mantine/core": "^7.2.2",
     "@nextui-org/react": "^2.2.9",
+    "embla-carousel-react": "^7.1.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
@@ -17,7 +20,7 @@
     "sharp": "^0.33.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
