--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/supabase-js": "^2.39.0",
     "@mantine/carousel": "^7.2.2",
     "@mantine/core": "^7.2.2",
     "@nextui-org/react": "^2.2.9",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/supabase-js": "^2.39.0",
     "embla-carousel-react": "^7.1.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
@@ -25,11 +25,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.5"
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "^1.11.0",
+    "postcss-simple-vars": "^7.0.1",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5"
   }
 }
