--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "embla-carousel-react": "^7.1.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-fonts": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.0"
