--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "@components/*" : ["./src/components/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../supabase-suth/lib/database.types.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../supabase-suth/lib/database.types.ts", "next.config.js"],
   "exclude": ["node_modules"]
 }
