filepond and check path conJoin

--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-filepond": "^7.1.2",
-    "sharp": "^0.33.0"
+    "sharp": "^0.33.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
