--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@mantine/carousel": "^7.2.2",
-    "@mantine/core": "^7.2.2",
+    "@mantine/core": "^7.5.1",
+    "@mantine/hooks": "^7.5.1",
     "@nextui-org/react": "^2.2.9",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "^0.0.10",
+    "@supabase/supabase-js": "^2.39.3",
     "embla-carousel-react": "^7.1.0",
     "filepond": "^4.30.4",
     "filepond-plugin-file-validate-size": "^2.2.8",
