--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "filepond-plugin-image-preview": "^4.6.11",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-auth": "^4.24.7",
     "next-fonts": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
