--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
     "framer-motion": "^10.16.5",
-    "next": "14.0.3",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-fonts": "^1.5.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
     "sharp": "^0.33.0",
     "uuid": "^9.0.1"
@@ -40,7 +40,7 @@
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.32",
     "postcss-preset-mantine": "^1.11.0",
     "postcss-simple-vars": "^7.0.1",
