--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss": "^8.4.32",
     "postcss-preset-mantine": "^1.11.0",
     "postcss-simple-vars": "^7.0.1",
+    "sonarqube-scanner": "^3.5.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
